--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   connectivity: ^0.4.3+2
   json_annotation: ^3.0.1
   built_value: ^6.7.0
+  flutter_screenutil: ^4.0.2+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
